# io-keyring

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml  flake.nix  scheme.excalidraw  shell.nix
.github/workflows/: examples.yml  tests.yml
apple-keychain-std/: Cargo.toml  README.md
apple-keychain-std/examples/: entry.rs
apple-keychain-std/src/: lib.rs
apple-keychain-std/tests/: connector.rs
examples/: apple-native-std.rs  apple-std.rs  crud.rs  secret-service-blocking-std.rs  secret-service-dbus-openssl-std.rs  secret-service-dbus-openssl-tokio.rs  secret-service-dbus-rust-crypto-std.rs  secret-service-dbus-rust-crypto-tokio.rs  secret-service-zbus-openssl-async-std.rs  secret-service-zbus-openssl-std.rs  secret-service-zbus-openssl-tokio.rs  secret-service-zbus-rust-crypto-async-std.rs  secret-service-zbus-rust-crypto-std.rs  secret-service-zbus-rust-crypto-tokio.rs  ss-dbus-openssl-std.rs  ss-dbus-std.rs  std.rs  windows-native-std.rs  windows-std.rs
lib/: Cargo.toml  README.md
lib/examples/: secret-service-dbus-openssl-tokio.rs  secret-service-dbus-rust-crypto-tokio.rs  secret-service-zbus-openssl-async-std.rs  secret-service-zbus-rust-crypto-async-std.rs  std.rs
lib/src/: io.rs  lib.rs  state.rs
lib/src/apple-keychain/: std.rs
lib/src/flow/: delete-entry.rs  mod.rs  read-entry.rs  write-entry.rs
lib/src/secret-service/crypto/: mod.rs
lib/src/secret-service/crypto/openssl/: std.rs
lib/src/secret-service/crypto/rust-crypto/: mod.rs  std.rs
lib/src/secret-service/crypto/sans-io/: flow.rs  io.rs
lib/src/secret-service/dbus/nonblock/: mod.rs  tokio.rs
lib/src/secret-service/sans-io/: flow-entry-delete.rs  io.rs
lib/src/secret-service/zbus/: async_std.rs  mod.rs  std.rs
lib/src/windows-credentials/: mod.rs
secret-service-dbus-std/: Cargo.toml
secret-service-dbus-std/examples/: entry.rs
secret-service-dbus-std/src/: collection.rs  connector.rs  error.rs  item.rs  lib.rs  service.rs  session.rs
secret-service-lib/: .gitignore  Cargo.toml  README.md  api.xml  build.rs
secret-service-lib/src/: io.rs  lib.rs  session.rs  state.rs
secret-service-lib/src/crypto/: algorithm.rs  dh.rs  mod.rs  state.rs
secret-service-lib/src/crypto/flow/: decrypt.rs  encrypt.rs  mod.rs
secret-service-lib/src/flow/: mod.rs  read-entry.rs
src/: entry.rs  flow.rs  io.rs  lib.rs  sans-io.rs  serde.rs  state.rs  std.rs
src/apple/: flow.rs  mod.rs  std.rs
src/apple-keychain/: mod.rs
src/coroutines/: delete.rs  mod.rs  read.rs  write.rs
src/runtimes/: mod.rs  std.rs
src/sans-io/: flow-entry-delete.rs  flow-entry-read.rs  flow-entry-write.rs  flow.rs  io.rs  mod.rs
src/secret-service/: mod.rs
src/secret-service/crypto/: std.rs
src/secret-service/crypto/sans-io/: algorithm.rs  mod.rs
src/secret-service/dbus/: mod.rs  session.rs
src/secret-service/dbus/blocking/: std.rs
src/secret-service/dbus/nonblock/: tokio.rs
src/secret-service/sans-io/: flow-entry-read.rs  flow-entry-write.rs  mod.rs  session.rs
src/secret-service/zbus/: api.rs  session.rs  std.rs  tokio.rs
src/secret_service/: flow.rs  io.rs  mod.rs  session.rs
src/secret_service/crypto/: common.rs  error.rs  flow.rs  mod.rs
src/secret_service/crypto/openssl/: mod.rs  std.rs
src/secret_service/crypto/rust_crypto/: mod.rs  std.rs
src/secret_service/dbus/: common.rs  flow.rs  io.rs  mod.rs  session.rs
src/secret_service/dbus/blocking/: mod.rs  std.rs
src/secret_service/dbus/crypto/: algorithm.rs  error.rs  mod.rs
src/secret_service/dbus/crypto/openssl/: std.rs
src/secret_service/dbus/crypto/rust_crypto/: std.rs
src/secret_service/dbus/nonblock/: tokio.rs
src/secret_service/dbus_blocking/: flow.rs  io.rs  mod.rs  std.rs
src/secret_service/dbus_blocking/crypto/: algorithm.rs  common.rs  error.rs  flow.rs  io.rs  mod.rs
src/secret_service/dbus_blocking/crypto/openssl/: mod.rs  std.rs
src/secret_service/dbus_blocking/crypto/rust_crypto/: std.rs
src/secret_service/zbus/: api.rs  async_std.rs  mod.rs  session.rs  std.rs  tokio.rs
src/secret_service_blocking/: config.rs  flow.rs  mod.rs  state.rs  std.rs
src/secret_service_blocking/crypto/: mod.rs  openssl.rs
src/windows/: flow.rs  mod.rs  std.rs
src/windows-credentials/: std.rs
windows-credentials-std/: Cargo.toml  README.md
windows-credentials-std/examples/: entry.rs
windows-credentials-std/src/: connector.rs  credential.rs  error.rs  lib.rs
windows-credentials-std/tests/: connector.rs
