[package]
name = "io-keyring"
description = "Set of I/O-free Rust coroutines and runtimes to manage keyring entries"
version = "0.0.1"
authors = ["soywod <clement.douin@posteo.net>"]
rust-version = "1.56"
edition = "2021"
license = "MIT"
categories = ["api-bindings"]
keywords = ["io-free", "coroutine", "runtime", "keyring", "keychain"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-keyring/latest/io_keyring"
repository = "https://github.com/pimalaya/io-keyring"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
std = ["dep:thiserror"]
serde = ["dep:serde"]
vendored = ["keyring/vendored"]

[dev-dependencies]
env_logger = "0.11"

[dependencies]
keyring = "=4.0.0-rc.1"
log = "0.4"
secrecy = "0.10"
serde = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
