[package]
name = "io-keyring"
description = "Set of I/O-free Rust coroutines and runtimes to manage keyring entries"
version = "0.0.1"
authors = ["soywod <clement.douin@posteo.net>"]
rust-version = "1.56"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["io-free", "coroutine", "runtime", "keyring", "keychain"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-keyring/latest/io_keyring"
repository = "https://github.com/pimalaya/io-keyring"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
std = []
serde = ["dep:serde"]
vendored = ["keyring/vendored"]

[dev-dependencies]
env_logger = "0.11"

[dependencies]
keyring = { version = "3.6", features = ["linux-native-sync-persistent", "crypto-rust", "apple-native", "windows-native"] }
log = "0.4"
secrecy = "0.10"
serde = { version = "1", optional = true }
thiserror = "2"
